<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.selumobileapps.mycontacts.DetailActivity"
    android:orientation="vertical">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvTitleDetail"
                android:text="@string/confirmData"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textAlignment="center" />

            <TextView
                android:text="@string/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvTitleDetail"
                android:id="@+id/tvNameDetail"
                android:layout_marginTop="@dimen/margin_top" />

            <TextView
                android:text="@string/birthdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvNameDetail"
                android:id="@+id/tvBirthdateDetail"
                android:layout_marginTop="@dimen/margin_top" />

            <TextView
                android:text="@string/telephone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvBirthdateDetail"
                android:id="@+id/tvTelephoneDetail"
                android:layout_marginTop="@dimen/margin_top" />

            <TextView
                android:text="@string/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvTelephoneDetail"
                android:id="@+id/tvEmailDetail"
                android:layout_marginTop="@dimen/margin_top" />

            <TextView
                android:text="@string/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvEmailDetail"
                android:id="@+id/tvDescriptionDetail"
                android:layout_marginTop="@dimen/margin_top" />
        </RelativeLayout>
    </ScrollView>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/editData"
        android:theme="@style/MyButton"
        android:textAlignment="center"
        android:id="@+id/btReturn" />

</LinearLayout>
